Aba de login html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Tela de login reponsiva</title>
 </head>
 <body>
-
+    <div class="fundo">
+        <div class="container">
+            <p class="texto">Faça seu login abaixo:</p>
+            <div class="login">
+                <div class="email">
+                    <input type="email" name="email">
+                </div>
+                <div class="senha">
+                    <input type="password" name="password">
+                </div>
+                <div class="botao">
+                    <button>Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
