--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Tela de login reponsiva</title>
 </head>
 <body>
@@ -13,9 +14,11 @@
             <div class="login">
                 <div class="email">
                     <input type="email" name="email">
+                    <i class='bx bx-envelope bx-flashing'></i>
                 </div>
                 <div class="senha">
                     <input type="password" name="password">
+                    <i class='bx bx-lock-alt bx-flashing'></i>
                 </div>
                 <div class="botao">
                     <button>Login</button>
